# Fruit_Classification-IEEE

./: README.md  app.py  app2.py  labels.txt  pyproject.toml  requirements.txt
